--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "graphql": "^16.3.0",
     "gray-matter": "^4.0.2",
@@ -19,5 +18,12 @@
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
+  },
+  "devDependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "classnames": "^2.3.1",
+    "next-compose-plugins": "^2.2.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0"
   }
 }
