--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
     "date-fns": "^2.16.1",
+    "eslint": "^8.9.0",
+    "eslint-config-next": "^12.1.0",
     "graphql": "^16.3.0",
     "gray-matter": "^4.0.2",
-    "next": "^10.0.0",
+    "marked": "^4.0.12",
+    "next": "^12.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-markdown": "^8.0.0",
+    "react-syntax-highlighter": "^15.4.5",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@zeit/next-sass": "^1.0.1",
