--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^12.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
     "react-syntax-highlighter": "^15.4.5",
     "remark": "^13.0.0",
@@ -28,6 +29,7 @@
     "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/react-icons": "^3.0.0",
     "@zeit/next-sass": "^1.0.1",
     "classnames": "^2.3.1",
     "next-compose-plugins": "^2.2.1",
