--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.16.1",
     "eslint": "^8.9.0",
     "eslint-config-next": "^12.1.0",
+    "framer-motion": "^6.3.11",
     "graphql": "^16.3.0",
     "gray-matter": "^4.0.2",
     "marked": "^4.0.12",
@@ -22,7 +23,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.3.3",
     "react-markdown": "^8.0.0",
+    "react-scroll-parallax": "^3.2.0",
     "react-syntax-highlighter": "^15.4.5",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
